--- a/app/index.html
+++ b/app/index.html
@@ -17,11 +17,11 @@
     
     <header>
         <div class="container">
-            <div class="row">
-                <div class="col-md-6">
+            <div class="row py-3">
+                <div class="col-md-4">
                     <a href="/"><img src="./images/logo.png" alt="Cosmetic Surgery Practice" class="img-resp"></a>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-8">
                     <div class="top-menu">
                         <ul>
                             <li><a href="">Home</a></li>
@@ -39,6 +39,46 @@
     </header>
     <!-- /header -->
 
+    <div id="main-nav">
+        <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
+            <div class="container">
+                <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Breast</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Body</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Face</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Nonsurgical</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Testimonials</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Photo Gallery</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <!-- #/main-nav -->
+
     <section id="banner">
         <div class="container">
             <div class="row">
@@ -51,8 +91,167 @@
     </section>
     <!-- #/banner -->
 
-    <footer>
+    <section id="about-section">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h1 class="mb-4">Lorem ipsum dolor sit amet</h1>
+                    <p class="mb-4">Vestibulum nisi quam, interdum et condimentum non, vestibulum vel quam. Morbi tempor ornare lectus, eu esucipit risus dapibus ac. Aenean id diam a erat elementum sagittis. Aenean sem nisi, vitae semper augue. Aliquam in ipsum sit amet ante pharetra faucibus.</p>
+                    <a href="" class="btn">Request a consultation</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- #/about-section -->
 
+    <section id="category-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 text-center">
+                    <img src="images/model.jpg" alt="Model" class="img-resp">
+                    <h3>Feature or Product Category</h3>
+                    <p class="sub-header"><em>Brand Name or Feature Benefit</em></p>
+                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur ametes adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <a href="" class="btn">Learn More</a>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <img src="images/model.jpg" alt="Model" class="img-resp">
+                    <h3>Feature or Product Category</h3>
+                    <p class="sub-header"><em>Brand Name or Feature Benefit</em></p>
+                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur ametes adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <a href="" class="btn">Learn More</a>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <img src="images/model.jpg" alt="Model" class="img-resp">
+                    <h3>Feature or Product Category</h3>
+                    <p class="sub-header"><em>Brand Name or Feature Benefit</em></p>
+                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur ametes adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <a href="" class="btn">Learn More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- #/category-section -->
+
+    <section id="nurse-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h1>Our Nurse Practitioners</h1>
+                    <p class="mb-4">Vestibulum nisi quam, interdum et condimentum non, vestibulum vel quam. Morbi tempor ornare lectus, eu esucipit risus dapibus ac. Aenean id diam a erat elementum sagittis. Aenean sem nisi, vitae semper augue. Aliquam in ipsum sit amet ante pharetra faucibus.</p>
+                    <a href="" class="btn">Request a consultation</a>
+                    <div class="badge-wrapper">
+                        <img src="images/badge.png" alt="Badge" class="img-resp">
+                        <img src="images/badge.png" alt="Badge" class="img-resp">
+                        <img src="images/badge.png" alt="Badge" class="img-resp">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- #/nurse-section -->
+
+    <section id="contact-section">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h1 class="mb-4">Contact Us</h1>
+                    <form>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    <label for="fname" class="form-label">First Name*</label>
+                                    <input type="text" class="form-control" id="fname" placeholder="First Name*">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="lname" class="form-label">Last Name*</label>
+                                    <input type="text" class="form-control" id="lname" placeholder="Last Name*">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="email" class="form-label">Email*</label>
+                                    <input type="text" class="form-control" id="email" placeholder="Email*">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="phone" class="form-label">Phone</label>
+                                    <input type="text" class="form-control" id="phone" placeholder="Phone">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="zip" class="form-label">Zip Code*</label>
+                                    <input type="text" class="form-control" id="zip" placeholder="Zip Code*">
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    <label for="procedure" class="form-label">Procedure of Interest*</label>
+                                    <input type="text" class="form-control" id="procedure" placeholder="Procedure of Interest*">
+                                </div>
+
+                                <div class="mb-3">
+                                    <label for="message" class="form-label">How can we help?</label>
+                                    <textarea type="text" class="form-control" id="message" placeholder="How can we help?"></textarea>
+                                </div>
+
+                                <button type="submit" class="btn btn-primary">Slide right to submit this form</button>
+                            </div>
+                        </div>
+
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- #/contact-section -->
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-6">
+                    <div class="map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3257.3288372529064!2d-120.66192673531695!3d35.27294960224966!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x48cf40ae0d2dee0e!2sEtna%20Interactive!5e0!3m2!1sen!2sus!4v1646805178484!5m2!1sen!2sus" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+                    <div class="contact-info">
+                        <p class="mb-0"><strong>John Smith, MD</strong></p>
+                        <p class="mb-0">1234 Anystreet Dr.<br>San Francisco, CA 94104</p>
+                        <p class="mb-0">Phone: <a href="">(800) 123-4567</a></p>
+                        <p class="mb-0">Phone: <a href="">(800) 321-7654</a></p>
+                        <p class="mb-0">Monday-Friday: 8am-5pm</p>
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="social">
+                        <a href="" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a href="" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="" target="_blank"><i class="fab fa-youtube"></i></a>
+                    </div>
+                    <p class="copyright mb-0">&copy; <span id="year"></span> John Smith, MD. All rights reserved.</p>
+                    <p>Medical Website Design and Marketing by <a href="" target="_blank">Etna Interactive</a></p>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col">
+                    <p><em>Keep in mind that each patient is unique and your results may vary.</em></p>
+                    <p>Vestibulum nisi quam, interdum et condimentum non, vestibulum vel quam. Morbi tempor ornare lectus, eu esucipit risus dapibus ac. Aenean id diam a erat elementum sagittis. Aenean sem nisi, vitae semper augue. Aliquam in ipsum sit amet ante pharetra faucibus.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-6">
+                    <ul class="footer-menu">
+                        <li><a href="">HIPAA Privacy Policy</a></li>
+                        <li><a href="">Related Resources</a></li>
+                        <li><a href="">Sitemap</a></li>
+                    </ul>
+                </div>
+                <div class="col-xl-6 follow-wrapper">
+                    <a href="" target="_blank"><img src="images/fb.jpg" alt="Facebook" class="img-resp"></a>
+                    <a href="" target="_blank"><img src="images/gplus.jpg" alt="Google Plus" class="img-resp"></a>
+                    <a href="" target="_blank"><img src="images/tw.jpg" alt="Twitter" class="img-resp"></a>
+                    <a href="" target="_blank"><img src="images/pin.jpg" alt="Pinterest" class="img-resp"></a>
+                    <a href="" target="_blank"><img src="images/print.jpg" alt="Print" class="img-resp"></a>
+                </div>
+            </div>
+        </div>
     </footer>
     <!-- /footer -->
 
