--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="row py-3">
                 <div class="col-md-4">
-                    <a href="/"><img src="./images/logo.png" alt="Cosmetic Surgery Practice" class="img-resp"></a>
+                    <a href="/"><img src="app/images/logo.png" alt="Cosmetic Surgery Practice" class="img-resp"></a>
                 </div>
                 <div class="col-md-8">
                     <div class="top-menu">
@@ -108,21 +108,21 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 text-center">
-                    <img src="images/model.jpg" alt="Model" class="img-resp">
+                    <img src="app/images/model.jpg" alt="Model" class="img-resp">
                     <h3>Feature or Product Category</h3>
                     <p class="sub-header"><em>Brand Name or Feature Benefit</em></p>
                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur ametes adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <a href="" class="btn">Learn More</a>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <img src="images/model.jpg" alt="Model" class="img-resp">
+                    <img src="app/images/model.jpg" alt="Model" class="img-resp">
                     <h3>Feature or Product Category</h3>
                     <p class="sub-header"><em>Brand Name or Feature Benefit</em></p>
                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur ametes adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <a href="" class="btn">Learn More</a>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <img src="images/model.jpg" alt="Model" class="img-resp">
+                    <img src="app/images/model.jpg" alt="Model" class="img-resp">
                     <h3>Feature or Product Category</h3>
                     <p class="sub-header"><em>Brand Name or Feature Benefit</em></p>
                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur ametes adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -141,9 +141,9 @@
                     <p class="mb-4">Vestibulum nisi quam, interdum et condimentum non, vestibulum vel quam. Morbi tempor ornare lectus, eu esucipit risus dapibus ac. Aenean id diam a erat elementum sagittis. Aenean sem nisi, vitae semper augue. Aliquam in ipsum sit amet ante pharetra faucibus.</p>
                     <a href="" class="btn">Request a consultation</a>
                     <div class="badge-wrapper">
-                        <img src="images/badge.png" alt="Badge" class="img-resp">
-                        <img src="images/badge.png" alt="Badge" class="img-resp">
-                        <img src="images/badge.png" alt="Badge" class="img-resp">
+                        <img src="app/images/badge.png" alt="Badge" class="img-resp">
+                        <img src="app/images/badge.png" alt="Badge" class="img-resp">
+                        <img src="app/images/badge.png" alt="Badge" class="img-resp">
                     </div>
                 </div>
             </div>
@@ -244,11 +244,11 @@
                     </ul>
                 </div>
                 <div class="col-xl-6 follow-wrapper">
-                    <a href="" target="_blank"><img src="images/fb.jpg" alt="Facebook" class="img-resp"></a>
-                    <a href="" target="_blank"><img src="images/gplus.jpg" alt="Google Plus" class="img-resp"></a>
-                    <a href="" target="_blank"><img src="images/tw.jpg" alt="Twitter" class="img-resp"></a>
-                    <a href="" target="_blank"><img src="images/pin.jpg" alt="Pinterest" class="img-resp"></a>
-                    <a href="" target="_blank"><img src="images/print.jpg" alt="Print" class="img-resp"></a>
+                    <a href="" target="_blank"><img src="app/images/fb.jpg" alt="Facebook" class="img-resp"></a>
+                    <a href="" target="_blank"><img src="app/images/gplus.jpg" alt="Google Plus" class="img-resp"></a>
+                    <a href="" target="_blank"><img src="app/images/tw.jpg" alt="Twitter" class="img-resp"></a>
+                    <a href="" target="_blank"><img src="app/images/pin.jpg" alt="Pinterest" class="img-resp"></a>
+                    <a href="" target="_blank"><img src="app/images/print.jpg" alt="Print" class="img-resp"></a>
                 </div>
             </div>
         </div>
