--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="app/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 <body>
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="row py-3">
                 <div class="col-md-4">
-                    <a href="/"><img src="app/images/logo.png" alt="Cosmetic Surgery Practice" class="img-resp"></a>
+                    <a href="/"><img src="assets/images/logo.png" alt="Cosmetic Surgery Practice" class="img-resp"></a>
                 </div>
                 <div class="col-md-8">
                     <div class="top-menu">
@@ -108,21 +108,21 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 text-center">
-                    <img src="app/images/model.jpg" alt="Model" class="img-resp">
+                    <img src="assets/images/model.jpg" alt="Model" class="img-resp">
                     <h3>Feature or Product Category</h3>
                     <p class="sub-header"><em>Brand Name or Feature Benefit</em></p>
                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur ametes adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <a href="" class="btn">Learn More</a>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <img src="app/images/model.jpg" alt="Model" class="img-resp">
+                    <img src="assets/images/model.jpg" alt="Model" class="img-resp">
                     <h3>Feature or Product Category</h3>
                     <p class="sub-header"><em>Brand Name or Feature Benefit</em></p>
                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur ametes adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <a href="" class="btn">Learn More</a>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <img src="app/images/model.jpg" alt="Model" class="img-resp">
+                    <img src="assets/images/model.jpg" alt="Model" class="img-resp">
                     <h3>Feature or Product Category</h3>
                     <p class="sub-header"><em>Brand Name or Feature Benefit</em></p>
                     <p class="mb-4">Lorem ipsum dolor sit amet, consectetur ametes adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -141,9 +141,9 @@
                     <p class="mb-4">Vestibulum nisi quam, interdum et condimentum non, vestibulum vel quam. Morbi tempor ornare lectus, eu esucipit risus dapibus ac. Aenean id diam a erat elementum sagittis. Aenean sem nisi, vitae semper augue. Aliquam in ipsum sit amet ante pharetra faucibus.</p>
                     <a href="" class="btn">Request a consultation</a>
                     <div class="badge-wrapper">
-                        <img src="app/images/badge.png" alt="Badge" class="img-resp">
-                        <img src="app/images/badge.png" alt="Badge" class="img-resp">
-                        <img src="app/images/badge.png" alt="Badge" class="img-resp">
+                        <img src="assets/images/badge.png" alt="Badge" class="img-resp">
+                        <img src="assets/images/badge.png" alt="Badge" class="img-resp">
+                        <img src="assets/images/badge.png" alt="Badge" class="img-resp">
                     </div>
                 </div>
             </div>
@@ -244,11 +244,11 @@
                     </ul>
                 </div>
                 <div class="col-xl-6 follow-wrapper">
-                    <a href="" target="_blank"><img src="app/images/fb.jpg" alt="Facebook" class="img-resp"></a>
-                    <a href="" target="_blank"><img src="app/images/gplus.jpg" alt="Google Plus" class="img-resp"></a>
-                    <a href="" target="_blank"><img src="app/images/tw.jpg" alt="Twitter" class="img-resp"></a>
-                    <a href="" target="_blank"><img src="app/images/pin.jpg" alt="Pinterest" class="img-resp"></a>
-                    <a href="" target="_blank"><img src="app/images/print.jpg" alt="Print" class="img-resp"></a>
+                    <a href="" target="_blank"><img src="assets/images/fb.jpg" alt="Facebook" class="img-resp"></a>
+                    <a href="" target="_blank"><img src="assets/images/gplus.jpg" alt="Google Plus" class="img-resp"></a>
+                    <a href="" target="_blank"><img src="assets/images/tw.jpg" alt="Twitter" class="img-resp"></a>
+                    <a href="" target="_blank"><img src="assets/images/pin.jpg" alt="Pinterest" class="img-resp"></a>
+                    <a href="" target="_blank"><img src="assets/images/print.jpg" alt="Print" class="img-resp"></a>
                 </div>
             </div>
         </div>
@@ -256,7 +256,7 @@
     <!-- /footer -->
 
 
-    <script type="text/javascript" src="app/js/custom.js"></script>
+    <script type="text/javascript" src="assets/js/custom.js"></script>
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
