--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="col-md-8">
                     <div class="top-menu">
-                        <ul>
+                        <ul class="p-0">
                             <li><a href="">Home</a></li>
                             <li><a href="">Specials &amp; Events</a></li>
                             <li><a href="">Patient Portal</a></li>
